m6-infra/policies/templates/disallow-privileged.yaml
# Admission policy as code: no privileged containers (Pods or workloads).
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
  annotations:
    description: Disallow privileged containers in Pods and workload templates.
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged

        all_containers[c] {
          c := input.review.object.spec.template.spec.containers[_]
        }
        all_containers[c] {
          c := input.review.object.spec.containers[_]
        }

        violation[{"msg": msg}] {
          c := all_containers[_]
          c.securityContext.privileged == true
          msg := sprintf("privileged container is not allowed: %v", [c.name])
        }
